--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "exports": {
     ".": {
       "import": "./index.mjs",
-      "require": "./index.cjs.js"
+      "require": "./index.cjs.js",
+      "driver": "./driver.js"
     }
   }
 }
