use new headless flag

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wapalyzer",
+  "name": "wapalyzer-core",
   "description": "Identify technology on websites",
   "keywords": [
     "analyze",
