--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "bin": {
     "wappalyzer": "./cli.js"
   },
-  "dependencies": {
+  "peerDependencies": {
     "puppeteer": "^21.7.0"
   },
   "engines": {
